--- a/css/style.css
+++ b/css/style.css
@@ -243,8 +243,12 @@ h2{
     position: relative;
 }
 
-.testa img:hover{
+.testa:hover img {
     filter: brightness(.5);
+}
+
+.testa:hover .icon-hover{
+    color: #fff;
 }
 
 .icon-hover{
@@ -254,10 +258,6 @@ h2{
     transform: translate(-50%, -50%);
     font-size: 50px;
     color: transparent;
-}
-
-.icon-hover:hover{ 
-   color: #fff;
 }
 
 /* SECTION CARD PER DOE */
@@ -277,18 +277,18 @@ h2{
 /* FOOTER CON BAR APP */
 
 footer{
-    width: 100%;
     height: 90px;
     position: fixed;
     bottom: 0;
     left: 0;
+    right: 0;
     background-color: #282828;
 }
 
 #footer{
+    width: 100%;
     display: flex;
-    justify-content: space-around;
-    gap: 6rem;
+    justify-content: space-between;
     margin: 20px 0;
 }
 
